[package]
name = "inboxbot"
version = "0.1.7"
edition = "2021"
description = "A telegram bot to save messages to a file"
license = "MIT"

[[bin]]
name = "inboxbot"
path = "main.rs"

[dependencies]
teloxide = { version = "^0.13", features = ["macros"] }
log = "^0.4"
pretty_env_logger = "^0.5"
tokio = { version = "^1.39", features = ["rt-multi-thread", "macros"] }
glob = "^0.3"
chrono = "^0.4"
lazy_static = "^1.5"
rand = "^0.8"
emoji = "^0.2"
