[package]
name = "inboxbot"
version = "0.1.17"
edition = "2021"
description = "A telegram bot to save messages to a file"
license = "MIT"

[[bin]]
name = "inboxbot"
path = "main.rs"

[dependencies]
teloxide = { version = "^0.15", features = ["macros"] }
log = "^0.4"
pretty_env_logger = "^0.5"
tokio = { version = "^1.44", features = ["rt-multi-thread", "macros"] }
glob = "^0.3"
chrono = "^0.4"
lazy_static = "^1.5"
randem = "^0.1"
regex = "1"
